# deepgboost

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml  claude-on-demand.yml  claude-pr-review.yml
benchmark/: benchmark.ipynb  config.json  results.md  run_ablation.py
benchmark/experiments/: abstract_test.py  synthetic_correlation_experiment.py
benchmark/models/: xgboost_classifier_model.py
benchmark/results/: abalone_bootstrap_test.json  abalone_bootstrap_test.txt  abalone_bootstrap_test_scores.csv  abalone_bootstrap_test_scores.json  ablation_10L_10T.json  ablation_5L_20T.json  ablation_baseline_20L_5T.json  adult_bootstrap_test.json  adult_bootstrap_test.txt  adult_bootstrap_test_scores.csv  adult_bootstrap_test_scores.json  bankmarketing_bootstrap_test.json  bankmarketing_bootstrap_test.txt  bankmarketing_bootstrap_test_scores.csv  bankmarketing_bootstrap_test_scores.json  benchmark_summary.md  bikesales_bootstrap_test.json  bikesales_bootstrap_test.txt  bikesales_bootstrap_test_scores.csv  bikesales_bootstrap_test_scores.json  californiahousing_bootstrap_test.json  californiahousing_bootstrap_test.txt  californiahousing_bootstrap_test_scores.csv  californiahousing_bootstrap_test_scores.json  cargo2000_bootstrap_test.txt  cargo2000_bootstrap_test_scores.csv  concrete_bootstrap_test.json  concrete_bootstrap_test.txt  (+22 more)
examples/: classifier.ipynb  quickstart.ipynb  regressor.ipynb
tests/: test_adaptive_layer_width.py  test_booster.py  test_callback.py  test_classifier.py  test_objective.py  test_regressor.py  test_training.py
(+9 files in other folders)
