[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deepgboost"
version = "0.1.0"
description = "Distributed Gradient Boosting Forest — deep graph tree ensemble algorithm"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "pandas>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-cov",
    "matplotlib>=3.7",
    "ruff>=0.15.8",
]
plotting = ["matplotlib>=3.7"]

[tool.setuptools.packages.find]
where = ["src"]
